# GovtIntel

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
eval/: gold_answers.json  test_queries.json
notebooks/: 02_chunking_benchmark.ipynb  04_fine_tuning.ipynb  05_decoding_experiments.ipynb
prompts/v1/: chain_of_thought.yaml  few_shot.yaml  zero_shot.yaml
src/govintel/: __init__.py  config.py  models.py
src/govintel/analysis/: __init__.py  engine.py
src/govintel/api/: app.py  dependencies.py  routes.py
src/govintel/evaluation/: __init__.py  metrics.py  ragas_eval.py  runner.py
src/govintel/generation/: __init__.py  errors.py  gemini.py  mistral.py  prompts.py  report.py
src/govintel/ingestion/: __init__.py  bootstrap.py  embedder.py  loader.py  usaspending.py
src/govintel/retrieval/: __init__.py  bm25.py  hybrid.py  reranker.py  vector.py
src/govintel/training/: __init__.py  decoding.py  synthetic.py
tests/: conftest.py  test_models.py
tests/test_analysis/: test_engine.py
tests/test_api/: test_routes.py
tests/test_evaluation/: test_eval_data.py  test_metrics.py  test_ragas_eval.py  test_runner.py
tests/test_generation/: test_citations.py  test_gemini.py  test_mistral.py  test_prompts.py  test_report.py
tests/test_ingestion/: test_bootstrap.py  test_embedder.py  test_loader.py  test_usaspending.py
tests/test_notebooks/: test_phase7_notebooks.py
tests/test_retrieval/: test_bm25.py  test_hybrid.py  test_reranker.py  test_vector.py
tests/test_training/: __init__.py  test_decoding.py  test_synthetic.py
